argocd/app/tubearchivist/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tubearchivist
  name: tubearchivist
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: tubearchivist
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tubearchivist
    spec:
      containers:
      - image: docker.io/bbilly1/tubearchivist:v0.5.9
        imagePullPolicy: IfNotPresent
        name: tubearchivist
        ports:
        - containerPort: 8000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
