argocd/app/tubearchivist/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tubearchivist
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector: {}
  type: ClusterIP
